// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test PreviewSlider should be disabled when in raw mode and drawing 1`] = `
<div>
  <div
    class="space"
  >
    Mock Antd Space
    <p>
      direction: 
      vertical
    </p>
    <div
      class="container"
    >
      <div>
        Mock Antd Tooltip
        <p>
          title: 
          Brightness
        </p>
        <svgr-url
          class="icon"
        />
      </div>
      <div
        class="slider"
      >
        Mock Antd Slider
        <p>
          min: 
          50
        </p>
        <p>
          max: 
          2000
        </p>
        <p>
          step: 
          1
        </p>
        <p>
          value: 
          450
        </p>
        <button
          disabled=""
          type="button"
        >
          onChange
        </button>
        <button
          disabled=""
          type="button"
        >
          onChangeComplete
        </button>
      </div>
      <div
        class="value"
      >
        450
      </div>
    </div>
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly when is previewing 1`] = `
<div>
  <div
    class="space"
  >
    Mock Antd Space
    <p>
      direction: 
      vertical
    </p>
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly when is previewing Ador 1`] = `
<div>
  <div
    class="space"
  >
    Mock Antd Space
    <p>
      direction: 
      vertical
    </p>
    <div
      class="container"
    >
      <div>
        Mock Antd Tooltip
        <p>
          title: 
          Brightness
        </p>
        <svgr-url
          class="icon"
        />
      </div>
      <div
        class="slider"
      >
        Mock Antd Slider
        <p>
          min: 
          50
        </p>
        <p>
          max: 
          2000
        </p>
        <p>
          step: 
          1
        </p>
        <p>
          value: 
          450
        </p>
        <button
          type="button"
        >
          onChange
        </button>
        <button
          type="button"
        >
          onChangeComplete
        </button>
      </div>
      <div
        class="value"
      >
        450
      </div>
    </div>
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly when is previewing Ador 2`] = `
<div>
  <div
    class="space"
  >
    Mock Antd Space
    <p>
      direction: 
      vertical
    </p>
    <div
      class="container"
    >
      <div>
        Mock Antd Tooltip
        <p>
          title: 
          Brightness
        </p>
        <svgr-url
          class="icon"
        />
      </div>
      <div
        class="slider"
      >
        Mock Antd Slider
        <p>
          min: 
          50
        </p>
        <p>
          max: 
          2000
        </p>
        <p>
          step: 
          1
        </p>
        <p>
          value: 
          0.25
        </p>
        <button
          type="button"
        >
          onChange
        </button>
        <button
          type="button"
        >
          onChangeComplete
        </button>
      </div>
      <div
        class="value"
      >
        0.25
      </div>
    </div>
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly when is previewing BB2 1`] = `
<div>
  <div
    class="space"
  >
    Mock Antd Space
    <p>
      direction: 
      vertical
    </p>
    <div
      class="container"
    >
      <div>
        Mock Antd Tooltip
        <p>
          title: 
          Brightness
        </p>
        <svgr-url
          class="icon"
        />
      </div>
      <div
        class="slider"
      >
        Mock Antd Slider
        <p>
          min: 
          50
        </p>
        <p>
          max: 
          2000
        </p>
        <p>
          step: 
          1
        </p>
        <p>
          value: 
          450
        </p>
        <button
          type="button"
        >
          onChange
        </button>
        <button
          type="button"
        >
          onChangeComplete
        </button>
      </div>
      <div
        class="value"
      >
        450
      </div>
    </div>
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly when is previewing BB2 2`] = `
<div>
  <div
    class="space"
  >
    Mock Antd Space
    <p>
      direction: 
      vertical
    </p>
    <div
      class="container"
    >
      <div>
        Mock Antd Tooltip
        <p>
          title: 
          Brightness
        </p>
        <svgr-url
          class="icon"
        />
      </div>
      <div
        class="slider"
      >
        Mock Antd Slider
        <p>
          min: 
          50
        </p>
        <p>
          max: 
          2000
        </p>
        <p>
          step: 
          1
        </p>
        <p>
          value: 
          0.25
        </p>
        <button
          type="button"
        >
          onChange
        </button>
        <button
          type="button"
        >
          onChangeComplete
        </button>
      </div>
      <div
        class="value"
      >
        0.25
      </div>
    </div>
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly with preview image 1`] = `
<div>
  <div
    class="space"
  >
    Mock Antd Space
    <p>
      direction: 
      vertical
    </p>
    <div
      class="container"
    >
      <div>
        Mock Antd Tooltip
        <p>
          title: 
          Preview Opacity
        </p>
        <svgr-url
          class="icon"
        />
      </div>
      <div
        class="slider"
      >
        Mock Antd Slider
        <p>
          min: 
          0
        </p>
        <p>
          max: 
          1
        </p>
        <p>
          step: 
          0.25
        </p>
        <p>
          value: 
          1
        </p>
        <button
          type="button"
        >
          onChange
        </button>
        <button
          type="button"
        >
          onChangeComplete
        </button>
      </div>
      <div
        class="value"
      >
        100
        %
      </div>
    </div>
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly with preview image 2`] = `
<div>
  <div
    class="space"
  >
    Mock Antd Space
    <p>
      direction: 
      vertical
    </p>
    <div
      class="container"
    >
      <div>
        Mock Antd Tooltip
        <p>
          title: 
          Preview Opacity
        </p>
        <svgr-url
          class="icon"
        />
      </div>
      <div
        class="slider"
      >
        Mock Antd Slider
        <p>
          min: 
          0
        </p>
        <p>
          max: 
          1
        </p>
        <p>
          step: 
          0.25
        </p>
        <p>
          value: 
          0.25
        </p>
        <button
          type="button"
        >
          onChange
        </button>
        <button
          type="button"
        >
          onChangeComplete
        </button>
      </div>
      <div
        class="value"
      >
        25
        %
      </div>
    </div>
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly without background image 1`] = `
<div>
  <div
    class="space"
  >
    Mock Antd Space
    <p>
      direction: 
      vertical
    </p>
  </div>
</div>
`;
